{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 65,
  "lineage": "bcf735fb-3ba5-324a-60bc-34d297e72cb0",
  "resources": [
    {
      "module": "module.ec2_instances",
      "mode": "managed",
      "type": "aws_instance",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01e27d968e66a4cf5",
            "arn": "arn:aws:ec2:eu-north-1:656860122216:instance/i-0cb8be5fae78033ab",
            "associate_public_ip_address": false,
            "availability_zone": "eu-north-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": false,
                "device_name": "/dev/sdf",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:eu-north-1:656860122216:key/3315e492-d472-49b7-93bc-a56752d3c8f0",
                "tags": {
                  "Environment": "dev",
                  "Name": "aws-cybersec-private-volume"
                },
                "tags_all": {
                  "Environment": "dev",
                  "Name": "aws-cybersec-private-volume"
                },
                "throughput": 0,
                "volume_id": "vol-0547446687dcbca0c",
                "volume_size": 20,
                "volume_type": "gp2"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0cb8be5fae78033ab",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "sakis",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-03e7877272bfda567",
            "private_dns": "ip-10-0-2-208.eu-north-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.208",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0b2895a634c19edc9",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a6d4aa520db4f671",
            "tags": {
              "Environment": "dev",
              "Name": "aws-cybersec-private-instance"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "aws-cybersec-private-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-07d95db016ba04f8f"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.ec2_instances.aws_key_pair.main",
            "module.ec2_instances.data.aws_ami.amazon_linux_2",
            "module.ec2_instances.tls_private_key.main",
            "module.security_groups.aws_security_group.private",
            "module.security_groups.aws_security_group.public",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_instances",
      "mode": "managed",
      "type": "aws_instance",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d4d7e98021b6b9a6",
            "arn": "arn:aws:ec2:eu-north-1:656860122216:instance/i-08a450bacb8f42e78",
            "associate_public_ip_address": true,
            "availability_zone": "eu-north-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08a450bacb8f42e78",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "sakis",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-09801e005d0aaf122",
            "private_dns": "ip-10-0-1-175.eu-north-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.175",
            "public_dns": "ec2-13-53-95-220.eu-north-1.compute.amazonaws.com",
            "public_ip": "13.53.95.220",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-053bfeffe6aa60a5b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06981acbc20b6b993",
            "tags": {
              "Environment": "dev",
              "Name": "aws-cybersec-public-instance"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "aws-cybersec-public-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ffb575bee51079ab"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.ec2_instances.aws_key_pair.main",
            "module.ec2_instances.data.aws_ami.ubuntu",
            "module.ec2_instances.tls_private_key.main",
            "module.security_groups.aws_security_group.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:656860122216:security-group/sg-07d95db016ba04f8f",
            "description": "Security group for private subnet",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07d95db016ba04f8f",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "SSH from public subnet",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0ffb575bee51079ab"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "aws-cybersec-private-sg",
            "name_prefix": "",
            "owner_id": "656860122216",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "aws-cybersec-private-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "aws-cybersec-private-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-01e1e8da835aab83f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.security_groups.aws_security_group.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:656860122216:security-group/sg-0ffb575bee51079ab",
            "description": "Security group for public subnet",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ffb575bee51079ab",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from my IP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from my IP",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "aws-cybersec-public-sg",
            "name_prefix": "",
            "owner_id": "656860122216",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "aws-cybersec-public-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "aws-cybersec-public-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-01e1e8da835aab83f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-026038329786e954b",
            "arn": "arn:aws:ec2:eu-north-1:656860122216:elastic-ip/eipalloc-026038329786e954b",
            "association_id": "eipassoc-0c5c2a28e9fefb111",
            "domain": "vpc",
            "id": "eipalloc-026038329786e954b",
            "network_border_group": "eu-north-1",
            "network_interface": "eni-05bbb765e14ed738a",
            "private_dns": "ip-10-0-1-173.eu-north-1.compute.internal",
            "private_ip": "10.0.1.173",
            "public_dns": "ec2-51-21-146-66.eu-north-1.compute.amazonaws.com",
            "public_ip": "51.21.146.66",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "aws-cybersec-nat-eip"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "aws-cybersec-nat-eip"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:656860122216:internet-gateway/igw-07f8758525dcf5ae9",
            "id": "igw-07f8758525dcf5ae9",
            "owner_id": "656860122216",
            "tags": {
              "Environment": "dev",
              "Name": "aws-cybersec-igw"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "aws-cybersec-igw"
            },
            "vpc_id": "vpc-01e1e8da835aab83f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-026038329786e954b",
            "association_id": "eipassoc-0c5c2a28e9fefb111",
            "connectivity_type": "public",
            "id": "nat-087d1ca33ccfa444e",
            "network_interface_id": "eni-05bbb765e14ed738a",
            "private_ip": "10.0.1.173",
            "public_ip": "51.21.146.66",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-06981acbc20b6b993",
            "tags": {
              "Environment": "dev",
              "Name": "aws-cybersec-nat-gateway"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "aws-cybersec-nat-gateway"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:656860122216:route-table/rtb-000942e040e1a441a",
            "id": "rtb-000942e040e1a441a",
            "owner_id": "656860122216",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-087d1ca33ccfa444e",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "aws-cybersec-private-rt"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "aws-cybersec-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-01e1e8da835aab83f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:656860122216:route-table/rtb-0e69a09ed88e2b7d7",
            "id": "rtb-0e69a09ed88e2b7d7",
            "owner_id": "656860122216",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07f8758525dcf5ae9",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "aws-cybersec-public-rt"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "aws-cybersec-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-01e1e8da835aab83f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d41cce5d6f0c8c0b",
            "route_table_id": "rtb-000942e040e1a441a",
            "subnet_id": "subnet-0a6d4aa520db4f671"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06b5adcca35d6f098",
            "route_table_id": "rtb-0e69a09ed88e2b7d7",
            "subnet_id": "subnet-06981acbc20b6b993"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:656860122216:subnet/subnet-0a6d4aa520db4f671",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1b",
            "availability_zone_id": "eun1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a6d4aa520db4f671",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "656860122216",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "aws-cybersec-private-subnet"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "aws-cybersec-private-subnet"
            },
            "vpc_id": "vpc-01e1e8da835aab83f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:656860122216:subnet/subnet-06981acbc20b6b993",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06981acbc20b6b993",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "656860122216",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "aws-cybersec-public-subnet"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "aws-cybersec-public-subnet"
            },
            "vpc_id": "vpc-01e1e8da835aab83f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:656860122216:vpc/vpc-01e1e8da835aab83f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0849014105eec273f",
            "default_route_table_id": "rtb-01ab2039ca5477e36",
            "default_security_group_id": "sg-0df717223a123b1a6",
            "dhcp_options_id": "dopt-0c580dc0f0ec3685d",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-01e1e8da835aab83f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01ab2039ca5477e36",
            "owner_id": "656860122216",
            "tags": {
              "Environment": "dev",
              "Name": "aws-cybersec-vpc"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "aws-cybersec-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}